manifests/apps/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: demo
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: demo
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
